Added Canon iP4500, iP4600, iP4700, iP4800, iP4900, iP7200 series printer instances.

--- a/NEWS
+++ b/NEWS
@@ -428,6 +428,45 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP2772  (EXPERIMENTAL)(*2)
        Canon PIXMA iP2780  (EXPERIMENTAL)(*2)
 
+       Canon iP4500 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP4500  (EXPERIMENTAL)(*2)
+
+       Canon iP4600 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP4600  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP4680  (EXPERIMENTAL)(*2)
+
+       Canon iP4700 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP4700  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP4760  (EXPERIMENTAL)(*2)
+
+       Canon iP4800 series (EXPERIMENTAL)(*1)
+       Canon PIXMA iP4810  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP4820  (EXPERIMENTAL)(*2)
+       Canon PIXUS iP4830  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP4840  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP4850  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP4870  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP4880  (EXPERIMENTAL)(*2)
+
+       Canon iP4900 series (EXPERIMENTAL)(*1)
+       Canon PIXMA iP4910  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP4920  (EXPERIMENTAL)(*2)
+       Canon PIXUS iP4930  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP4940  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP4950  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP4970  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP4980  (EXPERIMENTAL)(*2)
+
+       Canon iP7200 series (EXPERIMENTAL)
+       Canon PIXMA iP7210  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP7220  (EXPERIMENTAL)(*2)
+       Canon PIXUS iP7230  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP7240  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP7250  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP7260  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP7270  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP7280  (EXPERIMENTAL)(*2)
+
        Canon iX6500 series (EXPERIMENTAL)(*1)
        Canon PIXMA iX6510  (EXPERIMENTAL)(*2)
        Canon PIXMA iX6520  (EXPERIMENTAL)(*2)
@@ -493,7 +532,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA E610    (EXPERIMENTAL)(*2)
        Canon PIXMA E618    (EXPERIMENTAL)(*2)
 
-       Canon PIXMA iP7200  (EXPERIMENTAL)
+
 
 
        Note 1: Added the printer family
