Added instances of Canon MX300, MX310, MX320, MX330, MX340, MX350, MX360, MX370 families.

--- a/NEWS
+++ b/NEWS
@@ -483,6 +483,40 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iX6560  (EXPERIMENTAL)(*2)
        Canon PIXMA iX6580  (EXPERIMENTAL)(*2)
 			   
+       Canon MX300 series  (EXPERIMENTAL)(*1)
+       Canon PIXMA MX308   (EXPERIMENTAL)(*2)
+
+       Canon MX310 series  (EXPERIMENTAL)(*1)
+       Canon PIXMA MX318   (EXPERIMENTAL)(*2)
+
+       Canon MX320 series  (EXPERIMENTAL)(*1)
+       Canon PIXMA MX328   (EXPERIMENTAL)(*2)
+
+       Canon MX330 series  (EXPERIMENTAL)(*1)
+       Canon PIXMA MX338   (EXPERIMENTAL)(*2)
+
+       Canon MX340 series  (EXPERIMENTAL)(*1)
+       Canon PIXMA MX347   (EXPERIMENTAL)(*2)
+       Canon PIXMA MX348   (EXPERIMENTAL)(*2)
+
+       Canon MX350 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MX350   (EXPERIMENTAL)(*2)
+       Canon PIXMA MX357   (EXPERIMENTAL)(*2)
+       Canon PIXMA MX358   (EXPERIMENTAL)(*2)
+
+       Canon MX360 series  (EXPERIMENTAL)(*1)
+       Canon PIXMA MX366   (EXPERIMENTAL)(*2)
+       Canon PIXMA MX368   (EXPERIMENTAL)(*2)
+
+       Canon MX370 series  (EXPERIMENTAL)(*1)
+       Canon PIXMA MX371   (EXPERIMENTAL)(*2)
+       Canon PIXMA MX372   (EXPERIMENTAL)(*2)
+       Canon PIXMA MX374   (EXPERIMENTAL)(*2)
+       Canon PIXMA MX375   (EXPERIMENTAL)(*2)
+       Canon PIXMA MX376   (EXPERIMENTAL)(*2)
+       Canon PIXMA MX377   (EXPERIMENTAL)(*2)
+       Canon PIXMA MX378   (EXPERIMENTAL)(*2)
+
        Canon MX390 series  (EXPERIMENTAL)
        Canon PIXMA MX391   (EXPERIMENTAL)(*2)
        Canon PIXMA MX392   (EXPERIMENTAL)(*2)
