Added instances of Canon MP220 family.

--- a/NEWS
+++ b/NEWS
@@ -276,32 +276,36 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
      - Canon inkjets:
 
+       Canon MP220 series  (EXPERIMENTAL)(*1)
+       Canon PIXMA MP220   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP228   (EXPERIMENTAL)(*2)
+
        Canon MP230 series  (EXPERIMENTAL)
        Canon PIXMA MP230   (EXPERIMENTAL)(*2)
        Canon PIXMA MP236   (EXPERIMENTAL)(*2)
        Canon PIXMA MP237   (EXPERIMENTAL)(*2)
 
-       Canon MP240 series  (EXPERIMENTAL)
+       Canon MP240 series  (EXPERIMENTAL)(*1)
        Canon PIXMA MP240   (EXPERIMENTAL)(*2)
        Canon PIXMA MP245   (EXPERIMENTAL)(*2)
 
-       Canon MP250 series  (EXPERIMENTAL)
+       Canon MP250 series  (EXPERIMENTAL)(*1)
        Canon PIXMA MP250   (EXPERIMENTAL)(*2)
        Canon PIXMA MP252   (EXPERIMENTAL)(*2)
        Canon PIXMA MP258   (EXPERIMENTAL)(*2)
        Canon PIXMA MP259   (EXPERIMENTAL)(*2)
 
-       Canon MP260 series  (EXPERIMENTAL)
+       Canon MP260 series  (EXPERIMENTAL)(*1)
        Canon PIXMA MP260   (EXPERIMENTAL)(*2)
        Canon PIXMA MP268   (EXPERIMENTAL)(*2)
 
-       Canon MP270 series  (EXPERIMENTAL)
+       Canon MP270 series  (EXPERIMENTAL)(*1)
        Canon PIXMA MP270   (EXPERIMENTAL)(*2)
        Canon PIXUS MP270   (EXPERIMENTAL)(*2)
        Canon PIXMA MP272   (EXPERIMENTAL)(*2)
        Canon PIXMA MP276   (EXPERIMENTAL)(*2)
 
-       Canon MP280 series  (EXPERIMENTAL)
+       Canon MP280 series  (EXPERIMENTAL)(*1)
        Canon PIXMA MP280   (EXPERIMENTAL)(*2)
        Canon PIXUS MP280   (EXPERIMENTAL)(*2)
        Canon PIXMA MP282   (EXPERIMENTAL)(*2)
