Added instances of Canon MP470, MP480, MP490 families.

--- a/NEWS
+++ b/NEWS
@@ -324,6 +324,24 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP287   (EXPERIMENTAL)(*2)
        Canon PIXMA MP288   (EXPERIMENTAL)(*2)
 
+       Canon MP470 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP470   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP476   (EXPERIMENTAL)(*2)
+
+       Canon MP480 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP480   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP486   (EXPERIMENTAL)(*2)
+
+       Canon MP490 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP490   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP492   (EXPERIMENTAL)(*2)
+       Canon PIXUS MP493   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP495   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP496   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP497   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP498   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP499   (EXPERIMENTAL)(*2)
+
        Canon MG2100 series (EXPERIMENTAL)(*1)
        Canon PIXMA MG2110  (EXPERIMENTAL)(*2)
        Canon PIXMA MG2120  (EXPERIMENTAL)(*2)
