Added instances of Canon MP360, MP370, MP390 families.

--- a/NEWS
+++ b/NEWS
@@ -324,6 +324,23 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP287   (EXPERIMENTAL)(*2)
        Canon PIXMA MP288   (EXPERIMENTAL)(*2)
 
+       Canon MP360 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP360   (EXPERIMENTAL)(*2)
+       Canon SmartBase MP360  (EXPERIMENTAL)(*2)
+       Canon SmartBase MP360S (EXPERIMENTAL)(*2)
+       Canon MultiPASS MP360  (EXPERIMENTAL)(*2)
+
+       Canon MP370 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP370   (EXPERIMENTAL)(*2)
+       Canon SmartBase MP370  (EXPERIMENTAL)(*2)
+       Canon MultiPASS MP370  (EXPERIMENTAL)(*2)
+       Canon PIXUS MP375R  (EXPERIMENTAL)(*2)
+
+       Canon MP390 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP390   (EXPERIMENTAL)(*2)
+       Canon SmartBase MP390  (EXPERIMENTAL)(*2)
+       Canon MultiPASS MP390  (EXPERIMENTAL)(*2)
+
        Canon MP470 series  (EXPERIMENTAL)(*1)
        Canon PIXUS MP470   (EXPERIMENTAL)(*2)
        Canon PIXMA MP476   (EXPERIMENTAL)(*2)
