Added instances for Canon MP700, MP710, MP730, MP740, MP750, MP760, MP770, MP780, MP790 series.

--- a/NEWS
+++ b/NEWS
@@ -359,6 +359,38 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP498   (EXPERIMENTAL)(*2)
        Canon PIXMA MP499   (EXPERIMENTAL)(*2)
 
+       Canon MP700 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP700   (EXPERIMENTAL)(*2)
+       Canon SmartBase MP700 (EXPERIMENTAL)(*2)
+       Canon MultiPASS MP700 (EXPERIMENTAL)(*2)
+
+       Canon MP710 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP710   (EXPERIMENTAL)(*2)
+       Canon SmartBase MP710 (EXPERIMENTAL)(*2)
+       Canon MultiPASS MP710 (EXPERIMENTAL)(*2)
+
+       Canon MP730 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP730   (EXPERIMENTAL)(*2)
+       Canon SmartBase MP730 (EXPERIMENTAL)(*2)
+       Canon MultiPASS MP730 (EXPERIMENTAL)(*2)
+
+       Canon MP740 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP740   (EXPERIMENTAL)(*2)
+       Canon SmartBase MP740 (EXPERIMENTAL)(*2)
+       Canon MultiPASS MP740 (EXPERIMENTAL)(*2)
+
+       Canon MP750 series  (EXPERIMENTAL)(*1)
+
+       Canon MP760 series  (EXPERIMENTAL)(*1)
+
+       Canon MP770 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP700   (EXPERIMENTAL)(*2)
+
+       Canon MP780 series  (EXPERIMENTAL)(*1)
+
+       Canon MP790 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP790   (EXPERIMENTAL)(*2)
+
        Canon MG2100 series (EXPERIMENTAL)(*1)
        Canon PIXMA MG2110  (EXPERIMENTAL)(*2)
        Canon PIXMA MG2120  (EXPERIMENTAL)(*2)
