Added instances for Canon MP500, MP510, MP520, MP530, MP540, MP550, MP560 family.

--- a/NEWS
+++ b/NEWS
@@ -365,6 +365,29 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP498   (EXPERIMENTAL)(*2)
        Canon PIXMA MP499   (EXPERIMENTAL)(*2)
 
+       Canon MP500 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP500   (EXPERIMENTAL)(*2)
+
+       Canon MP510 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP510   (EXPERIMENTAL)(*2)
+
+       Canon MP520 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP520   (EXPERIMENTAL)(*2)
+
+       Canon MP530 series  (EXPERIMENTAL)(*1)
+
+       Canon MP540 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP540   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP545   (EXPERIMENTAL)(*2)
+
+       Canon MP550 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP550   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP558   (EXPERIMENTAL)(*2)
+
+       Canon MP560 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP560   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP568   (EXPERIMENTAL)(*2)
+
        Canon MP700 series  (EXPERIMENTAL)(*1)
        Canon PIXUS MP700   (EXPERIMENTAL)(*2)
        Canon SmartBase MP700 (EXPERIMENTAL)(*2)
