Added instances for Canon MP600, MP610, MP620, MP630, MP640 family.

--- a/NEWS
+++ b/NEWS
@@ -388,6 +388,24 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXUS MP560   (EXPERIMENTAL)(*2)
        Canon PIXMA MP568   (EXPERIMENTAL)(*2)
 
+       Canon MP600 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP600   (EXPERIMENTAL)(*2)
+
+       Canon MP610 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP610   (EXPERIMENTAL)(*2)
+
+       Canon MP620 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP620   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP628   (EXPERIMENTAL)(*2)
+
+       Canon MP630 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP630   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP638   (EXPERIMENTAL)(*2)
+
+       Canon MP640 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP640   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP648   (EXPERIMENTAL)(*2)
+
        Canon MP700 series  (EXPERIMENTAL)(*1)
        Canon PIXUS MP700   (EXPERIMENTAL)(*2)
        Canon SmartBase MP700 (EXPERIMENTAL)(*2)
