Added instances for Canon MP800, MP810, MP830, MP900, MP950, MP960, MP970, MP980, MP990 family.

--- a/NEWS
+++ b/NEWS
@@ -438,6 +438,35 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon MP790 series  (EXPERIMENTAL)(*1)
        Canon PIXUS MP790   (EXPERIMENTAL)(*2)
 
+       Canon MP800 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP800   (EXPERIMENTAL)(*2)
+
+       Canon MP810 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP810   (EXPERIMENTAL)(*2)
+
+       Canon MP830 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP830   (EXPERIMENTAL)(*2)
+
+       Canon MP900 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP900   (EXPERIMENTAL)(*2)
+
+       Canon MP950 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP950   (EXPERIMENTAL)(*2)
+
+       Canon MP960 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP960   (EXPERIMENTAL)(*2)
+
+       Canon MP970 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP970   (EXPERIMENTAL)(*2)
+
+       Canon MP980 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP980   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP988   (EXPERIMENTAL)(*2)
+
+       Canon MP990 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP990   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP996   (EXPERIMENTAL)(*2)
+
        Canon MG2100 series (EXPERIMENTAL)(*1)
        Canon PIXMA MG2110  (EXPERIMENTAL)(*2)
        Canon PIXMA MG2120  (EXPERIMENTAL)(*2)
