Added instances of Canon iX4000, iX5000, iX7000, Pro9000, Pro9000 Mk.II, Pro95000, Pro9500 Mk.II family.

--- a/NEWS
+++ b/NEWS
@@ -678,6 +678,11 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP7270  (EXPERIMENTAL)(*2)
        Canon PIXMA iP7280  (EXPERIMENTAL)(*2)
 
+       Canon iX4000 series (EXPERIMENTAL)(*1)
+
+       Canon iX5000 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iX5000  (EXPERIMENTAL)(*2)
+
        Canon iX6500 series (EXPERIMENTAL)(*1)
        Canon PIXMA iX6510  (EXPERIMENTAL)(*2)
        Canon PIXMA iX6520  (EXPERIMENTAL)(*2)
@@ -686,6 +691,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iX6550  (EXPERIMENTAL)(*2)
        Canon PIXMA iX6560  (EXPERIMENTAL)(*2)
        Canon PIXMA iX6580  (EXPERIMENTAL)(*2)
+
+       Canon iX7000 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iX7000  (EXPERIMENTAL)(*2)
 			   
        Canon MX300 series  (EXPERIMENTAL)(*1)
        Canon PIXMA MX308   (EXPERIMENTAL)(*2)
@@ -843,6 +851,17 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA E610    (EXPERIMENTAL)(*2)
        Canon PIXMA E618    (EXPERIMENTAL)(*2)
 
+       Canon Pro9000 series (EXPERIMENTAL)(*1)
+       Canon PIXUS Pro9000  (EXPERIMENTAL)(*2)
+
+       Canon Pro9000 II series (EXPERIMENTAL)(*1)
+       Canon PIXUS Pro9000 II  (EXPERIMENTAL)(*2)
+
+       Canon Pro9500 series (EXPERIMENTAL)(*1)
+       Canon PIXUS Pro9500  (EXPERIMENTAL)(*2)
+
+       Canon Pro9500 II series (EXPERIMENTAL)(*1)
+       Canon PIXUS Pro9500 II  (EXPERIMENTAL)(*2)
 
 
 
