Added instances for iP5000, iP5200, iP5200R, iP5300, iP6000D, iP6100D, iP6210D, iP6220D, iP6310D, iP6320D, iP6600D, iP6700D, iP7100, iP7500, iP8100, iP8500, iP8600, iP9910 family.

--- a/NEWS
+++ b/NEWS
@@ -631,6 +631,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP3680  (EXPERIMENTAL)(*2)
 
        Canon iP4100 series (EXPERIMENTAL)(*1)
+
+       Canon iP4100R series (EXPERIMENTAL)(*1)
        Canon PIXUS iP4100R (EXPERIMENTAL)(*2)
 
        Canon iP4200 series (EXPERIMENTAL)(*1)
@@ -667,6 +669,51 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP4950  (EXPERIMENTAL)(*2)
        Canon PIXMA iP4970  (EXPERIMENTAL)(*2)
        Canon PIXMA iP4980  (EXPERIMENTAL)(*2)
+
+       Canon iP5000 series (EXPERIMENTAL)(*1)
+
+       Canon iP5200 series (EXPERIMENTAL)(*1)
+
+       Canon iP5200R series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP5200R  (EXPERIMENTAL)(*2)
+
+       Canon iP5300 series (EXPERIMENTAL)(*1)
+
+       Canon iP6000D series (EXPERIMENTAL)(*1)
+
+       Canon iP6100D series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP6100D  (EXPERIMENTAL)(*2)
+
+       Canon iP6210D series (EXPERIMENTAL)(*1)
+
+       Canon iP6220D series (EXPERIMENTAL)(*1)
+
+       Canon iP6310D series (EXPERIMENTAL)(*1)
+
+       Canon iP6320D series (EXPERIMENTAL)(*1)
+
+       Canon iP6600D series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP6600D  (EXPERIMENTAL)(*2)
+
+       Canon iP6700D series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP6700D  (EXPERIMENTAL)(*2)
+
+       Canon iP7100 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP7100  (EXPERIMENTAL)(*2)
+
+       Canon iP7500 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP7500  (EXPERIMENTAL)(*2)
+
+       Canon iP8100 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP8100  (EXPERIMENTAL)(*2)
+
+       Canon iP8500 series (EXPERIMENTAL)(*1)
+
+       Canon iP8600 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP8600  (EXPERIMENTAL)(*2)
+
+       Canon iP9910 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP9910  (EXPERIMENTAL)(*2)
 
        Canon iP7200 series (EXPERIMENTAL)
        Canon PIXMA iP7210  (EXPERIMENTAL)(*2)
