--- a/NEWS
+++ b/NEWS
@@ -1031,6 +1031,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon SELPHY CP710
        Canon SELPHY CP750
        Canon SELPHY CP800
+       Canon iP2700 series
 
   6) Added Catalan translation.
 
