Added IEEE1284 device ID for Canon SELPHY CP760. Information from Apple Forums: https://discussions.apple.com/message/22082722?ac_cid=tw123456#22082722

--- a/NEWS
+++ b/NEWS
@@ -1030,6 +1030,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon SELPHY CP510
        Canon SELPHY CP710
        Canon SELPHY CP750
+       Canon SELPHY CP760
        Canon SELPHY CP800
        Canon iP2700 series
 
