Added IEEE1284 device IDs for Canon PIXMA iP3000, Epson Stylus Photo 1270, Canon SELPHY CP400.

--- a/NEWS
+++ b/NEWS
@@ -1027,12 +1027,15 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon SELPHY ES1
        Canon SELPHY ES2
        Canon SELPHY CP-220
+       Canon SELPHY CP400
        Canon SELPHY CP510
        Canon SELPHY CP710
        Canon SELPHY CP750
        Canon SELPHY CP760
        Canon SELPHY CP800
        Canon iP2700 series
+       Canon PIXMA iP3000
+       Epson Stylus Photo 1270
 
   6) Added Catalan translation.
 
