Added Canon MP160 IEEE1284 device ID. Info from https://fedoraproject.org/wiki/Test_Day:2010-03-25_Printing

--- a/NEWS
+++ b/NEWS
@@ -1040,6 +1040,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP4000 (possibly incomplete)
        Canon PIXMA iP4200 (possibly incomplete)
        Canon Pro9000 II series (possibly incomplete)
+       Canon MP160 (possibly incomplete)
        Canon MP250 series
        Canon MP280 series (possibly incomplete)
        Epson Stylus Photo 1270
