Added IEEE1284 device ID for Canon MP450 series. Information from own printer.

--- a/NEWS
+++ b/NEWS
@@ -1041,6 +1041,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon MP160 (possibly incomplete)
        Canon MP250 series
        Canon MP280 series (possibly incomplete)
+       Canon MP450 series
 
      - Device IDs added for the following Epson printers:
        Epson Stylus Photo 1270
