Added IEEE1284 device ID for Canon SELPHY CP600. Information from Apple forums: https://discussions.apple.com/thread/3205750?start=225&tstart=0

--- a/NEWS
+++ b/NEWS
@@ -1029,6 +1029,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon SELPHY CP-220
        Canon SELPHY CP400
        Canon SELPHY CP510
+       Canon SELPHY CP600
        Canon SELPHY CP710
        Canon SELPHY CP750
        Canon SELPHY CP760
